--- a/src/components/PokemonSpace/PokemonSpace.css
+++ b/src/components/PokemonSpace/PokemonSpace.css
@@ -1,15 +1,24 @@
   .PokemonSpace {
     position: relative;
+    padding: 10px;
+    border: 5px solid #F5F5F5;
+    background: #F5F5F5;
   }
   
   .PokemonSpace img {
-    width: 50%;
+    width: 75%;
     height: auto;
   }
   
   .PokemonSpace > img {
-    width: 50%;
+    width: 75%;
     height: auto;
+  }
+
+  .PokemonSpace p {
+    font-family: "Flexo-Bold",arial,sans-serif;
+    color: #919191;
+    font-size: 80%;
   }
   
   .PokemonSpace .PokemonSpace-title {
